force-app/main/default/objects/Utility_NMC_Tariff__c/Utility_NMC_Tariff__c.object-meta.xml
<CustomObject>
    <label>Sizing Method</label>
    <nameField>
        
        <label>Utility and Class</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Sizing Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>