force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NMC Value is being used for sizing</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>