force-app/main/default/objects/Utility_NMC_Tariff__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <label>April</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>