force-app/main/default/objects/Utility_NMC_Tariff__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <label>August</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>