force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Value__c</fullName>
    <formula>IF( ISPICKVAL(Class__c, &quot;Class 2&quot;), (Distribution_Charge__c +  Transmission_Charge__c +  Transition_Charge__c +  Generation_Charge__c) , 

IF( ISPICKVAL(Class__c, &quot;Class 3&quot;), (Transmission_Charge__c +  Transition_Charge__c +  Generation_Charge__c) , 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>