force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>