force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Current_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Billing Rate</label>
    <type>Checkbox</type>
</CustomField>