force-app/main/default/objects/Utility_NMC_Tariff__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <label>December</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>