force-app/main/default/objects/Utility_NMC_Tariff__c/fields/December_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>December_Previous_Year__c</fullName>
    <label>December (Previous Year)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>