force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Default_service_kWh_charge__c.field-meta.xml
<CustomField>
    <fullName>Default_service_kWh_charge__c</fullName>
    <inlineHelpText>In the ISO-NE load zone where the Host Customer is located</inlineHelpText>
    <label>Default service kWh charge</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>