force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Distribution_Charge__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Charge__c</fullName>
    <label>Distribution Charge</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>