force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Distribution_Company_charges__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Company_charges__c</fullName>
    <formula>Transmission_kWh_Charge__c +  Default_service_kWh_charge__c +  Transition_kWh_Charge__c  + Distribution_kWh_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Company charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>