force-app/main/default/objects/Utility_NMC_Tariff__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <label>February</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>