force-app/main/default/objects/Utility_NMC_Tariff__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <label>January</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>