force-app/main/default/objects/Utility_NMC_Tariff__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <label>July</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>