force-app/main/default/objects/Utility_NMC_Tariff__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <label>June</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>