force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Load_Zone__c.field-meta.xml
<CustomField>
    <fullName>Load_Zone__c</fullName>
    <label>Load Zone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>