force-app/main/default/objects/Utility_NMC_Tariff__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <label>March</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>