force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Maximum_kWh__c.field-meta.xml
<CustomField>
    <fullName>Maximum_kWh__c</fullName>
    <label>Maximum kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>