force-app/main/default/objects/Utility_NMC_Tariff__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <label>May</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>