force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Minimum_kWh__c.field-meta.xml
<CustomField>
    <fullName>Minimum_kWh__c</fullName>
    <label>Minimum kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>