force-app/main/default/objects/Utility_NMC_Tariff__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <label>November</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>