force-app/main/default/objects/Utility_NMC_Tariff__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <label>October</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>