force-app/main/default/objects/Utility_NMC_Tariff__c/fields/October_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>October_Previous_Year__c</fullName>
    <label>October (Previous Year)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>