force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <description>This is used in the customer filing document for SMART projects.</description>
    <inlineHelpText>This is used in the customer filing document for SMART projects.</inlineHelpText>
    <label>Rate Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>