force-app/main/default/objects/Utility_NMC_Tariff__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <label>September</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>