force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Sizing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sizing_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sizing Rate</label>
    <type>Checkbox</type>
</CustomField>