force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status is maintained by Ops, and represents if a tariff is still being used by the utility. A Shared Solar System shouldn&apos;t have a retired tariff associated with it.</description>
    <inlineHelpText>Status is maintained by Ops, and represents if a tariff is still being used by the utility. A Shared Solar System shouldn&apos;t have a retired tariff associated with it.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Active</fullName>
                
                
                    <label>Active</label>
                
                </value>
            
                <value>
                
                    <fullName>Retired</fullName>
                
                
                    <label>Retired</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>