force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Tariff_Key__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Key__c</fullName>
    <formula>Utility__c + &quot; &quot; + Load_Zone__c + &quot; &quot; + TEXT(Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tariff Key</label>
    <type>Text</type>
</CustomField>