force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Tariff_Period__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Period__c</fullName>
    <label>Tariff Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>