force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Transition_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transition_Charge__c</fullName>
    <label>Transition Charge</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>