force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Transition_kWh_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transition_kWh_Charge__c</fullName>
    <label>Transition kWh Charge</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>