force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Transmission_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Charge__c</fullName>
    <label>Transmission Charge</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>