force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <label>Utility</label>
    <length>20</length>
    <type>Text</type>
</CustomField>