force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Utility_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Utility_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Relationship</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipName>Utility_NMC_Tariffs</relationshipName>
    <type>Lookup</type>
</CustomField>