force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Valid_for_Period__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Period__c</fullName>
    <inlineHelpText>Time period for which this tariff is valid.</inlineHelpText>
    <label>Valid for Period</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NGRID November to April</fullName>
                
                
                    <label>NGRID November to April</label>
                
                </value>
            
                <value>
                
                    <fullName>NGRID May to October</fullName>
                
                
                    <label>NGRID May to October</label>
                
                </value>
            
                <value>
                
                    <fullName>Eversource January to June</fullName>
                
                
                    <label>Eversource January to June</label>
                
                </value>
            
                <value>
                
                    <fullName>Eversource July to December</fullName>
                
                
                    <label>Eversource July to December</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>