force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Value_of_Net_Metering_Credit__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Net_Metering_Credit__c</fullName>
    <label>Value of Net Metering Credit</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>