force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Value_of_NMC__c.field-meta.xml
<CustomField>
    <fullName>Value_of_NMC__c</fullName>
    <formula>Value_of_Net_Metering_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of NMC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>