force-app/main/default/objects/Utility_NMC_Tariff__c/fields/Year_of_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Tariff__c</fullName>
    <label>Year of Tariff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>